# kaggle-env

./: .envrc  .gitignore  README.md  flake.nix  main.py  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: lnynjckx00m3r2dnb3likzjd3dax2blg-source  nnwb7fcjv6kmg6camp1wgv7pzw52l4p7-source  wz6pw7bm0qmj0j6n8i2craddlhj662l5-source
.github/workflows/: nix-flake-update.yml
