[project]
name = "kaggle-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=3.3.0",
    "boruta>=0.4.3",
    "boto3>=1.43.0",
    "cartopy>=0.25.0",
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "cesium>=0.12.4",
    "comm>=0.2.3",
    "cytoolz>=1.1.0",
    "datasets>=2.14.6",
    "deap>=1.4.4",
    "dipy>=1.12.1",
    "docker>=7.1.0",
    "easyocr>=1.7.2",
    "emoji>=2.15.0",
    "fasttext>=0.9.3",
    "featuretools>=1.31.0",
    "fiona>=1.10.1",
    "flax>=0.12.7",
    "fury>=2.0.0a7",
    "fuzzywuzzy>=0.18.0",
    "gensim>=4.4.0",
    "geojson>=3.3.0",
    "google-adk[a2a,eval]>=1.21.0",
    "google-cloud-aiplatform>=1.157.0",
    "google-cloud-videointelligence>=2.19.0",
    "google-cloud-vision>=3.14.0",
    "google-genai>=2.8.0",
    "gpxpy>=1.6.2",
    "h2o>=3.46.0.11",
    "haversine>=2.9.0",
    "hep-ml>=0.8.0",
    "igraph>=1.0.0",
    "imagehash>=4.3.2",
    "ipympl>=0.10.0",
    "ipywidgets==8.1.5",
    "isoweek>=1.3.3",
    "janome>=0.5.0",
    "jedi>=0.19.2",
    "jiter==0.10.0",
    "jupyter-lsp==1.5.1",
    "jupyter-server==2.12.5",
    "jupyter-server-proxy>=4.5.0",
    "jupyterlab>=3.6.8",
    "jupyterlab-lsp>=3.10.2",
    "kaggle>=2.2.3",
    "kaggle-cli>=0.12.3",
    "kaggle-environments>=1.27.3",
    "kagglehub[hf-datasets,pandas-datasets,signing]>=0.4.2",
    "keras-cv>=0.9.0",
    "keras-nlp>=0.29.1",
    "keras-tuner>=1.4.8",
    "kornia>=0.8.3",
    "langid>=1.1.6",
    "libpysal>=4.14.1",
    "lime>=0.2.0.1",
    "line-profiler>=5.0.2",
    "mamba>=0.11.3",
    "matplotlib>=3.10.0",
    "mlcrate>=0.2.0",
    "mne>=1.12.1",
    "mpld3>=0.5.12",
    "nbconvert==6.4.5",
    "nbdev>=3.0.17",
    "nilearn>=0.14.0rc0",
    "olefile>=0.47",
    "onnx>=1.22.0rc2",
    "openslide-bin>=4.0.1.1",
    "openslide-python>=1.4.6",
    "optuna>=4.9.0",
    "pandas-profiling>=3.6.6",
    "pandasql>=0.7.3",
    "papermill>=2.7.0",
    "path>=17.1.1",
    "path-py>=12.5.0",
    "pdf2image>=1.17.0",
    "playwright==1.61.0",
    "plotly-express>=0.4.1",
    "pudb>=2025.1.5",
    "pyarabic>=0.6.15",
    "pycryptodome>=3.23.0",
    "pydicom>=3.0.2",
    "pyemd>=2.0.0",
    "pyexcel-ods>=0.6.0",
    "pyldavis>=3.4.1",
    "pymongo>=4.17.0",
    "pympler>=1.1",
    "pypdf>=6.13.2",
    "pytesseract>=0.3.13",
    "python-lsp-server>=1.14.0",
    "pytorch-ignite>=0.6.0.dev20260611",
    "pytorch-lightning>=2.6.5",
    "pyupset>=0.1.1.post7",
    "qgrid>=1.3.1",
    "qtconsole>=5.7.2",
    "ray>=2.55.1",
    "rgf-python>=3.12.0",
    "rtree>=1.4.1",
    "s3fs>=0.4.2",
    "scikit-learn>=1.9.0",
    "scikit-multilearn>=0.2.0",
    "scikit-optimize>=0.10.2",
    "scikit-plot>=0.3.7",
    "scikit-surprise>=1.1.5",
    "segment-anything",
    "shapely>=2.1.2",
    "simpleitk>=2.5.5",
    "squarify>=0.4.4",
    "tensorflow-io>=0.37.1",
    "torchcodec==0.10.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchtune>=0.6.1",
    "tpot>=1.1.0",
    "transformers>=5.0.0",
    "vtk>=9.6.2",
    "wand>=0.7.1",
    "wandb>=0.28.0",
    "wavio>=0.0.9",
    "xvfbwrapper>=0.2.23",
    "ydata-profiling>=4.18.4",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }

[tool.uv]
prerelease = "allow"
